# pdf_tools

./: README.md  pyproject.toml
docs/: INTRANET_DEPLOYMENT.md
pdf_tools_service/: CONTRIBUTING.md  README.md  config.json  requirements.txt  run.sh
pdf_tools_service/app/: __init__.py
pdf_tools_service/app/controllers/: base.py  extract_controller.py  merge_controller.py
pdf_tools_service/app/services/: base.py  extract_service.py  merge_service.py
pdf_tools_service/app/static/js/: preview.js
pdf_tools_service/app/templates/: extract.html  index.html  merge.html
pdf_tools_service/app/utils/: pdf_parser.py
pdf_tools_service/tests/: conftest.py  test_extract_service.py  test_merge_service.py
src/pdf_tools_service/: __main__.py  deployment_intranet.md  gunicorn.sh  requirements.txt  run.sh  setup.sh
src/pdf_tools_service/app/: __init__.py
src/pdf_tools_service/app/controllers/: __init__.py  base.py  extract_controller.py  merge_controller.py
src/pdf_tools_service/app/services/: extract_service.py  merge_service.py  metrics.py
src/pdf_tools_service/app/static/: style.css
src/pdf_tools_service/app/static/js/: preview.js
src/pdf_tools_service/app/templates/: base.html  extract.html  merge.html  pdf_tools_home.html
tests/: conftest.py  test_extract_service.py  test_merge_service.py  test_page_parser.py  test_routes.py
