[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_tools_service"
version = "0.1.0"
description = "Lightweight Flask PDF tools service"
authors = [{name = "PDF Tools Maintainers"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "PyPDF2",
    "pdf2image",
    "WTForms",
    "Pillow"
]

[tool.flask]
app = "pdf_tools_service.app:create_app"
